Fixed navbar spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,12 +181,36 @@
    /* box-shadow: 0px 0px 15px 0px rgb(229, 124, 27) !important; */
  }
 
- #navBar {
+
+
+ .navBar {
    display: flex;
    flex-direction: row;
-   justify-content: space-between;
+   justify-content: space-evenly;
    align-items: center;
    z-index: 20;
+ }
+
+ .navLink {
+   color: black;
+   font-size: 1.1rem;
+   /* max-width: 15%; */
+   text-align: center;
+   margin-right: 5%;
+   text-decoration: underline;
+   font-family: ofelia-text, sans-serif;
+   font-weight: 400;
+   font-style: normal;
+   line-height: 1.5rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .navLink :hover {
+   cursor: pointer;
+   color: rgb(229, 124, 27)
  }
 
  .mobileNav #mobileLinks {
@@ -220,27 +244,7 @@
    max-width: 200px;
  }
 
- .navLink {
-   color: black;
-   font-size: 1.1rem;
-   max-width: 15%;
-   text-align: center;
-   margin-right: 5%;
-   text-decoration: underline;
-   font-family: ofelia-text, sans-serif;
-   font-weight: 400;
-   font-style: normal;
-   line-height: 1.5rem;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
- }
 
- .navLink :hover {
-   cursor: pointer;
-   color: rgb(229, 124, 27)
- }
 
  .bioSection {
    display: flex;
@@ -303,7 +307,7 @@
    }
 
    /* Collapse the navbar into 3 lines on small screens, expand when clicked */
-   #navBar {
+   .navBar {
      display: none;
    }
 
